do not weave docs w/o POD (such as binaries)

--- a/dist.ini
+++ b/dist.ini
@@ -14,7 +14,7 @@ repository.web = http://github.com/frioux/Win32-ServiceManager
 repository.type = git
 
 [MetaJSON]
-[PodWeaver]
+[PodWeaverIfPod]
 [PkgVersion]
 [ReadmeFromPod]
 [PodSyntaxTests]
