switch to GithubMeta

--- a/dist.ini
+++ b/dist.ini
@@ -7,12 +7,7 @@ version          = 0.001001
 [NextRelease]
 [@Git]
 [@Basic]
-
-[MetaResources]
-repository.url = git://github.com/frioux/Win32-ServiceManager.git
-repository.web = http://github.com/frioux/Win32-ServiceManager
-repository.type = git
-
+[GithubMeta]
 [MetaJSON]
 [PodWeaverIfPod]
 [PkgVersion]
