store prereqs in cpanfile

--- a/dist.ini
+++ b/dist.ini
@@ -13,8 +13,4 @@ version          = 0.001001
 [PkgVersion]
 [ReadmeFromPod]
 [PodSyntaxTests]
-
-[Prereqs]
-Moo                 = 1.000007
-Test::Deep          = 0.110
-IPC::System::Simple = 1.21
+[Prereqs::FromCPANfile]
