leave binaries alone in packaging

--- a/dist.ini
+++ b/dist.ini
@@ -11,8 +11,17 @@ version          = 0.002001
   issues = 1
 
 [MetaJSON]
-[PodWeaverIfPod]
+
+[Encoding]
+match = \.exe$
+encoding = bytes
+
+[PodWeaver]
+finder = :InstallModules
+
 [PkgVersion]
+finder = :InstallModules
+
 [ReadmeFromPod]
 [PodSyntaxTests]
 [Prereqs::FromCPANfile]
