--- a/dist.ini
+++ b/dist.ini
@@ -1,5 +1,6 @@
 name             = Win32-ServiceManager
 author           = Arthur Axel "fREW" Schmidt <frioux+cpan@gmail.com>
+author           = Wes Malone <wesm@cpan.org>
 license          = Perl_5
 copyright_holder = Arthur Axel "fREW" Schmidt
 version          = 0.002003
